--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -60,8 +60,8 @@
 
 .icons {
   display: flex;
-  justify-content: space-between;
-  width: 300px;
+  justify-content: flex-end;
+
 
   &-search,
   &-basket,
@@ -71,6 +71,28 @@
     height: 50px;
   }
 }
+
+.header-authentication {
+  width: 100%;
+
+  h3 {
+    padding: 9px;
+  }
+}
+
+.button-signOut,
+.button-signIn,
+.button-signUp
+{
+  margin-left: 5px;
+  padding: 5px;
+  border: none;
+  background-color: #5f0877;
+  border-radius: 10px;
+  color: white;
+}
+
+
 
 .header-navigation {
   display: flex;
