--- a/src/app/chair/about-chair/about-chair.component.html
+++ b/src/app/chair/about-chair/about-chair.component.html
@@ -19,7 +19,7 @@
 
         <div class="about-chair-main-content-info">
           <span>{{chosenChair.info.name}}</span>
-          <span>{{chosenChair.info.type}} кресло</span>
+          <span>{{chosenChair.info.type}}</span>
           <span>{{chosenChair.info.price}} руб.</span>
           <div class="about-chair-main-content-info-buttons">
             <div class="button-switch">
