--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
         <div class="icons-basket">
           <img src="./assets/icons/корзина.png" alt="корзина" title="корзина">
         </div>
-        <div class="icons-user" *ngIf="isLogged">
+        <div class="icons-user" *ngIf="authenticationService.isLogged  && !authenticationService.err">
           <img src="./assets/icons/пользователь.png" alt="пользователь" title="пользователь">
         </div>
       </div>
@@ -36,14 +36,16 @@
 
       <div *ngIf="!(authenticationService.userData | async)">
         <input type="text" [(ngModel)]="email" placeholder="email">
-        <input type="password" [(ngModel)]="password" placeholder="password">
+        <input type="password" [(ngModel)]="password" placeholder="пароль">
 
-        <button (click)="signUp()" class="button-signUp">Зарегистрироваться</button>
+        <button (click)="signUp()" class="button-signUp" [disabled]="!email || !password">Зарегистрироваться</button>
 
-        <button (click)="signIn()" class="button-signIn">Войти</button>
+        <button (click)="signIn()" class="button-signIn" [disabled]="!email || !password">Войти</button>
       </div>
 
       <button (click)="signOut()" *ngIf="authenticationService.userData | async" class="button-signOut">Выйти</button>
+
+      <h3 class="text-danger" *ngIf="authenticationService.err">{{ authenticationService.err }}</h3>
     </div>
   </div>
 
@@ -63,9 +65,3 @@
 
 </footer>
 
-
-
-
-<!-- <app-sofa *ngFor="let sofa of allSofas"
-            [name]="sofa.sof.name"></app-sofa>
-  <app-home></app-home>-->
