--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,7 +53,7 @@
     <span routerLink="sofas" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active">Диваны</span>
     <span routerLink="chairs" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active">Кресла</span>
     <span routerLink="tables" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active">Столы</span>
-    <span routerLink="sale" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active">Акции</span>
+    <!--<span routerLink="sale" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active">Акции</span>-->
   </nav>
 </header>
 
