--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,20 +2,17 @@
 
   <div class="main-cent">
     <div class="main-image">
-      <h1>Каждую неделю <br/>
-        новые скидки <br/>
-        до -30%
-      </h1>
+      <h1>Мебель для дома</h1>
     </div>
   </div>
-
+<!--
   <div class="main-caption">
     <div class="main-cent">
       <h2>Акции недели</h2>
     </div>
   </div>
 
-  <div class="main-sales"></div>
+  <div class="main-sales"></div>-->
 
   <div class="main-caption">
     <div class="main-cent">
