--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,8 +27,9 @@
 }
 
 .home-link {
-  width: 50px;
-  height: 50px;
+  align-items: center;
+  width: 30px;
+  height: 30px;
   font-size: 20px;
 }
 
@@ -61,14 +62,16 @@
 .icons {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 
 
   &-search,
   &-basket,
   &-compare,
   &-user {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
+    margin: 0 3px;
   }
 }
 
@@ -87,7 +90,7 @@
   margin-left: 5px;
   padding: 5px;
   border: none;
-  background-color: #5f0877;
+  background-color: #15004a;
   border-radius: 10px;
   color: white;
 }
