--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,14 +9,16 @@
     display: flex; }
   .main-image {
     display: flex;
-    align-items: flex-end;
+    /* align-items: flex-start;*/
     width: 100%;
     background-color: blanchedalmond;
     height: 450px;
-    background-image: url("../../assets/home/диван.jpg");
+    background-image: url("../../assets/home/главная.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat; }
+    .main-image h1 {
+      margin: 10px 60px 0 auto; }
   .main-caption {
     width: 100%;
     padding: 30px 0;
