--- a/src/app/basket/basket.component.css
+++ b/src/app/basket/basket.component.css
@@ -28,3 +28,6 @@
         border: none; }
         .basket-info-container-place-an-order:hover {
           cursor: pointer; }
+
+[disabled] {
+  opacity: .5; }
