--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -80,22 +80,22 @@
     </div>
 
     <div class="pagination">
-      <ul *ngIf="pager.pages && pager.pages.length ">
-        <li [ngClass]="{disabled:pager.currentPage === 1}">
+      <ul *ngIf="pager?.pages && pager?.pages.length ">
+        <li [ngClass]="{disabled:pager?.currentPage === 1}">
           <a (click)="setPage(1, products)">First</a>
         </li>
-        <li [ngClass]="{disabled:pager.currentPage === 1}">
-          <a (click)="setPage(pager.currentPage - 1, products)">Previous</a>
+        <li [ngClass]="{disabled:pager?.currentPage === 1}">
+          <a (click)="setPage(pager?.currentPage - 1, products)">Previous</a>
         </li>
-        <li *ngFor="let page of pager.pages"
-            [ngClass]="{active:pager.currentPage === page}">
+        <li *ngFor="let page of pager?.pages"
+            [ngClass]="{active:pager?.currentPage === page}">
           <a (click)="setPage(page, products)">{{page}}</a>
         </li>
-        <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-          <a (click)="setPage(pager.currentPage + 1, products)">Next</a>
+        <li [ngClass]="{disabled:pager?.currentPage === pager?.totalPages}">
+          <a (click)="setPage(pager?.currentPage + 1, products)">Next</a>
         </li>
-        <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-          <a (click)="setPage(pager.totalPages, products)">Last</a>
+        <li [ngClass]="{disabled:pager?.currentPage === pager?.totalPages}">
+          <a (click)="setPage(pager?.totalPages, products)">Last</a>
         </li>
       </ul>
     </div>
