--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="basketProducts.length">
+<ng-container *ngIf="basketProducts?.length">
 <div class="basket">
   <div class="basket-products">
     <app-basket-item *ngFor="let item of basketProducts"
@@ -14,12 +14,13 @@
       <button class="basket-info-container-place-an-order"
               routerLink="/order"
               [routerLinkActiveOptions]="{exact:true}"
-              routerLinkActive="active">Оформить заказ</button>
+              routerLinkActive="active"
+              [disabled]="!email">Оформить заказ</button>
     </div>
   </div>
 </div>
 </ng-container>
 
-<ng-container *ngIf="!basketProducts.length">
+<ng-container *ngIf="!basketProducts?.length">
   <div style="text-align: center; font-size: 20px">Ваша корзина пуста!!!</div>
 </ng-container>
