--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -56,7 +56,7 @@
                name="delivery"
                value="курьер"
                formControlName="delivery"
-               (click)="deliveryChecked = 'курьер'">
+               (click)="changeK()">
         <label for="courier">Курьер</label>
       </div>
 
@@ -82,7 +82,7 @@
                name="delivery"
                value="самовывоз"
                formControlName="delivery"
-               (click)="deliveryChecked = 'самовывоз'">
+               (click)="changeS()">
         <label for="pickup">Самовывоз</label>
       </div>
 
@@ -115,7 +115,7 @@
 
     <button class="order-button"
             type="submit"
-            [disabled]="getDisabled()" >Подтверждаю заказ</button>
+            [disabled]="orderForm.invalid" >Подтверждаю заказ</button>
   </form>
 </div>
 
