--- a/src/app/all-products/all-products.component.scss
+++ b/src/app/all-products/all-products.component.scss
@@ -103,6 +103,14 @@ app-product {
   opacity: .5;
 }
 
+fieldset {
+  margin-bottom: 20px;
+}
+
+legend {
+  font-weight: bold;
+}
+
 @media screen and (max-width: 800px) {
   app-product {
     width: 47%;
