--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-// для header
+/*// для header
 @import '../styles/variables.scss';
 
 .cent {
@@ -145,7 +145,7 @@
 
 .active {
   outline: none;
-}
+}*/
 
 //для footer
 
