--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -6,6 +6,7 @@
                      [item]="item"
                      [email]="email"
                      [userId]="userId"
+                     [docId]="docId"
                      [(total)]="totalCost" ></app-basket-item>
   </div>
 
