'update_sofas_filter'

--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -1,147 +1,13 @@
 <div class="products">
   <div class="products-filter">
-   <!-- <form action="">
-      <div class="type">Тип:</div>
-      <div class="point-type">
-        <label for="straight">прямой:</label>
-        <input type="checkbox"
-               id="straight"
-               name="type"
-               value="прямой"
-               [(ngModel)]="straight">
-      </div>
-      <div class="point-type">
-        <label for="corner">угловой:</label>
-        <input type="checkbox"
-               id="corner"
-               name="type"
-               value="угловой"
-               [(ngModel)]="corner">
-      </div>
+    <ng-container *ngIf="path === 'sofas'">
+      <app-sofas-filter
+                        [products]="products"
+                        [(pager)]="pager"
+                        [(pagedItems)]="pagedItems"
+                        [(filteredProducts)]="filteredProducts"></app-sofas-filter>
+    </ng-container>
 
-      <div class="mechanism">Механизм:</div>
-      <div class="point-mechanism">
-        <label for="eurobook">еврокнижка:</label>
-        <input type="checkbox"
-               id="eurobook"
-               name="mechanism"
-               value="еврокнижка"
-               [(ngModel)]="euroBook">
-      </div>
-      <div class="point-mechanism">
-        <label for="rollOut">выкатной:</label>
-        <input type="checkbox"
-               id="rollOut"
-               name="mechanism"
-               value="выкатной"
-               [(ngModel)]="rollOut">
-      </div>
-
-      <div class="length">Длина, см:</div>
-      <div class="point-length">
-        <input type="text"
-               id="minLength"
-               name="minLength"
-               placeholder="от"
-               [(ngModel)]="minLength">
-        <input type="text"
-               id="maxLength"
-               name="maxLength"
-               placeholder="до"
-               [(ngModel)]="maxLength">
-      </div>
-
-      <div class="price">Цена:</div>
-      <div class="point-price">
-        <input type="text"
-               id="minPrice"
-               name="minPrice"
-               placeholder="от"
-               [(ngModel)]="minPrice">
-        <input type="text"
-               id="maxPrice"
-               name="maxPrice"
-               placeholder="до"
-               [(ngModel)]="maxPrice">
-      </div>
-    </form>-->
-
-    <form [formGroup]="filterSofasForm"
-          (ngSubmit)="filter()">
-      <fieldset formGroupName="typeInfo">
-        <legend>Тип:</legend>
-        <div class="point-type">
-          <label for="straight">прямой:</label>
-          <input type="checkbox"
-                 id="straight"
-                 name="type"
-                 value="прямой"
-                 formControlName="type1">
-        </div>
-        <div class="point-type">
-          <label for="corner">угловой:</label>
-          <input type="checkbox"
-                 id="corner"
-                 name="type"
-                 value="угловой"
-                 formControlName="type2">
-        </div>
-      </fieldset>
-
-      <fieldset formGroupName="mechanismInfo">
-        <legend>Механизм:</legend>
-        <div class="point-mechanism">
-          <label for="eurobook">еврокнижка:</label>
-          <input type="checkbox"
-                 id="eurobook"
-                 name="mechanism"
-                 value="еврокнижка"
-                 formControlName="mechanism1">
-        </div>
-        <div class="point-mechanism">
-          <label for="rollOut">выкатной:</label>
-          <input type="checkbox"
-                 id="rollOut"
-                 name="mechanism"
-                 value="выкатной"
-                 formControlName="mechanism2">
-        </div>
-      </fieldset>
-
-      <fieldset formGroupName="lengthInfo">
-        <legend>Длина, см:</legend>
-        <div class="point-length">
-          <input type="text"
-                 id="minLength"
-                 name="minLength"
-                 placeholder="от"
-                 formControlName="minLength">
-          <input type="text"
-                 id="maxLength"
-                 name="maxLength"
-                 placeholder="до"
-                 formControlName="maxLength">
-        </div>
-      </fieldset>
-
-      <fieldset formGroupName="priceInfo">
-        <legend>Цена, руб:</legend>
-        <div class="point-price">
-          <input type="text"
-                 id="minPrice"
-                 name="minPrice"
-                 placeholder="от"
-                 formControlName="minPrice">
-          <input type="text"
-                 id="maxPrice"
-                 name="maxPrice"
-                 placeholder="до"
-                 formControlName="maxPrice">
-        </div>
-      </fieldset>
-
-      <button type="submit">Показать</button>
-    </form>
   </div>
 
 
