--- a/src/app/all-products/all-products.component.css
+++ b/src/app/all-products/all-products.component.css
@@ -16,10 +16,11 @@
     border-radius: 10px;
     color: white; }
 
-.point-type {
+/*.point-type {
   display: flex;
   width: 80px;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .type,
 .mechanism,
@@ -28,20 +29,33 @@
 .bedWidth,
 .price {
   margin: 30px 0 10px;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
-.point-length input,
-.point-bedLength input,
-.point-bedWidth input,
-.point-price input {
-  display: inline-block;
-  width: 100px; }
+.point-length,
+.point-bedLength,
+.point-bedWidth,
+.point-price {
+
+  input {
+    display: inline-block;
+    width: 100px;
+  }
+}
 
 .point-mechanism {
   display: flex;
   width: 110px;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
+fieldset {
+  margin-bottom: 20px;
+}
+
+legend {
+  font-weight: bold;
+}*/
 .all-products {
   width: 100%;
   display: flex;
@@ -79,12 +93,6 @@ app-product {
   background-color: silver;
   color: white;
   opacity: .5; }
-
-fieldset {
-  margin-bottom: 20px; }
-
-legend {
-  font-weight: bold; }
 
 @media screen and (max-width: 800px) {
   app-product {
